--- a/AI-900.md
+++ b/AI-900.md
@@ -12,7 +12,7 @@ Q: Which natural language processing (NLP) workload is used to generate closed c
 Q: Which type of artificial intelligence (AI) workload provides the ability to generate bounding boxes that identify the locations of different types of vehicles in an image?
 <details><summary>Show the answer</summary><p>
 
-- **object detection**
+- **Object detection**
 > Object detection provides the ability to generate bounding boxes identifying the locations of different types of vehicles in an image. The other answer choices also process images, but their outcomes are different. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/4-understand-computer-vision)
 </details>
 
@@ -37,7 +37,7 @@ Q: Which two artificial intelligence (AI) workload features are part of the Azur
 Q: Which principle of responsible artificial intelligence (AI) has the objective of ensuring that AI solutions benefit all parts of society regardless of gender or ethnicity?
 <details><summary>Show the answer</summary><p>
 
-- **inclusiveness**
+- **Inclusiveness**
 > The inclusiveness principle is meant to ensure that AI solutions empower and engage everyone, regardless of criteria such as physical ability, gender, sexual orientation, or ethnicity. Privacy and security, reliability and safety, and accountability do not discriminate based on these criteria but also do not emphasize the significance of bringing benefits to all parts of society. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/8-understand-responsible-ai)
 </details>
 
@@ -45,7 +45,7 @@ Q: Which principle of responsible artificial intelligence (AI) has the objective
 Q: Which principle of responsible artificial intelligence (AI) involves evaluating and mitigating the bias introduced by the features of a model?
 <details><summary>Show the answer</summary><p>
 
-- **fairness**
+- **Fairness**
 > Fairness involves evaluating and mitigating the bias introduced by the features of a model. Privacy is meant to ensure that privacy provisions are included in AI solutions. Transparency provides clarity regarding the purpose of AI solutions, the way they work, and their limitations. Accountability is focused on ensuring that AI solutions meet clearly defined ethical and legal standards. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/8-understand-responsible-ai)
 </details>
 
@@ -72,7 +72,7 @@ Which two issues should be considered as part of the responsible AI principle of
 Q: Which principle of responsible artificial intelligence (AI) ensures that an AI system meets any legal and ethical standards it must abide by?
 <details><summary>Show the answer</summary><p>
 
-- **accountability**
+- **Accountability**
 > The accountability principle ensures that AI systems are designed to meet any ethical and legal standards that are applicable. The privacy and security principle states that AI systems must be designed to protect any personal and/or sensitive data. The inclusiveness principle states that AI systems must empower people in a positive and engaging way. The fairness principle is applied to AI systems to ensure that users of the systems are treated fairly. [Source<sup>1</sup>](https://learn.microsoft.com/training/paths/explore-computer-vision-microsoft-azure/) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/8-understand-responsible-ai)
 </details>
 
@@ -91,7 +91,7 @@ Q: Which type of machine learning algorithm predicts a numeric label associated 
 <details><summary>Show the answer</summary><p>
 
 - **Regression**
-> The regression algorithms are used to predict numeric values. Clustering algorithms group data points that have similar characteristics. Classification algorithms are used to predict the category to which an input value belongs. Unsupervised learning is a category of learning algorithms that includes clustering but not regression or classification. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/) [Source<sup>3</sup>](https://learn.microsoft.com/training/modules/understand-classification-machine-learning/2-what-is-classification) [Source<sup>3</sup>](https://learn.microsoft.com/training/modules/train-evaluate-cluster-models/2-what-is-clustering)
+> The regression algorithms are used to predict numeric values. Clustering algorithms group data points that have similar characteristics. Classification algorithms are used to predict the category to which an input value belongs. Unsupervised learning is a category of learning algorithms that includes clustering but not regression or classification. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/understand-classification-machine-learning/2-what-is-classification) [Source<sup>3</sup>](https://learn.microsoft.com/training/modules/train-evaluate-cluster-models/2-what-is-clustering)
 </details>
 
 ---
@@ -432,7 +432,7 @@ Q: Which generative AI model is used to generate images based on natural languag
 <details><summary>Show the answer</summary><p>
 
 - **DALL-E**
-> DALL-E is a model that can generate images from natural language. GPT-4 and GPT-3.5 can understand and generate natural language and code but not images. Embeddings can convert text into numerical vector form to facilitate text similarity. Whisper can transcribe and translate speech to text. [Source<sup></sup>](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation) [Source<sup></sup>](https://learn.microsoft.com/azure/ai-services/openai/concepts/models)
+> DALL-E is a model that can generate images from natural language. GPT-4 and GPT-3.5 can understand and generate natural language and code but not images. Embeddings can convert text into numerical vector form to facilitate text similarity. Whisper can transcribe and translate speech to text. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation) [Source<sup>2</sup>](https://learn.microsoft.com/azure/ai-services/openai/concepts/models)
 </details>
 
 ---
