--- a/AI-900.md
+++ b/AI-900.md
@@ -164,7 +164,7 @@ What should you create in a Machine Learning studio?
 <details><summary>Show the answer</summary><p>
 
 - **A job**
-> A job must be created in a Machine Learning studio to use Machine Learning to train a regression model. A workspace must be created before you can access Machine Learning studio. An Azure container instance and an AKS cluster can be created as a deployment target after the training of a model is complete. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
+> A job must be created in a Machine Learning studio to use Machine Learning to train a regression model. A workspace must be created before you can access Machine Learning Studio. An Azure container instance and an AKS cluster can be created as a deployment target after the training of a model is complete. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
 </details>
 
 ---
@@ -258,7 +258,7 @@ Q: Which two prebuilt models allow you to use the Azure AI Document Intelligence
 </details>
 
 ---
-Q: Which two Azure AI Document Intelligence models include identifying common data fields as part of its data extraction capabilities? Each correct answer presents a complete solution.
+Q: Which two Azure AI Document Intelligence models include identifying common data fields as part of their data extraction capabilities? Each correct answer presents a complete solution.
 <details><summary>Show the answer</summary><p>
 
 - **Business card model**
@@ -271,7 +271,7 @@ Q: When using the Face Detect API of the Azure AI Face service, which feature he
 <details><summary>Show the answer</summary><p>
 
 - **Face attributes**
-> Face attributes are a set of features that can be detected by the Face Detect API. Attributes such as accessories (glasses, mask, headwear etc.) can be detected. Face rectangle, face ID, and face landmarks do not allow you to determine whether a person is wearing glasses or headwear. [Source<sup>1</sup>](https://learn.microsoft.com/azure/cognitive-services/computer-vision/overview-identity) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/detect-analyze-faces/)
+> Face attributes are a set of features that can be detected by the Face Detect API. Attributes such as accessories (glasses, mask, headwear, etc.) can be detected. Face rectangle, face ID, and face landmarks do not allow you to determine whether a person is wearing glasses or headwear. [Source<sup>1</sup>](https://learn.microsoft.com/azure/cognitive-services/computer-vision/overview-identity) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/detect-analyze-faces/)
 </details>
 
 ---
@@ -284,7 +284,7 @@ Q: When using the Azure AI Face service, what should you use to perform one-to-m
 </details>
 
 ---
-Q: Which natural language processing (NLP) technique assigns values to words such as plant and flower, so that they are considered closer to each other than a word such as airplane?
+Q: Which natural language processing (NLP) technique assigns values to words such as plant and flower so that they are considered closer to each other than a word such as airplane?
 <details><summary>Show the answer</summary><p>
 
 - **Vectorization**
@@ -304,7 +304,7 @@ Q: Which Azure AI Service for Language feature can be used to analyze online use
 <details><summary>Show the answer</summary><p>
 
 - **Sentiment analysis**
-> Sentiment analysis provides sentiment labels, such as negative, neutral, and positive, based on a confidence score from text analysis. This makes it suitable for understanding user sentiment for product reviews. The named entity recognition, key phrase extraction, and language detection features cannot perform sentiment analysis for product reviews.[Source<sup>1</sup>](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/) [Source<sup>2</sup>](https://learn.microsoft.com/azure/cognitive-services/language-service/sentiment-opinion-mining/overview) [Source<sup>3</sup>](https://learn.microsoft.com/azure/cognitive-services/language-service/sentiment-opinion-mining/overview)
+> Sentiment analysis provides sentiment labels, such as negative, neutral, and positive, based on a confidence score from text analysis. This makes it suitable for understanding user sentiment for product reviews. The named entity recognition, key phrase extraction, and language detection features cannot perform sentiment analysis for product reviews. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/) [Source<sup>2</sup>](https://learn.microsoft.com/azure/cognitive-services/language-service/sentiment-opinion-mining/overview) [Source<sup>3</sup>](https://learn.microsoft.com/azure/cognitive-services/language-service/sentiment-opinion-mining/overview)
 </details>
 
 ---
@@ -323,7 +323,7 @@ Q: Which three values are returned by the language detection feature of the Azur
 - **ISO 6391 Code**
 - **Language Name**
 - **Score**
-> Language Name, ISO 6391 Code, and Score are three values returned by the Language service of natural language processing (NLP) in Azure. Bounding box coordinates are returned by the Azure AI Vision services in Azure. Wikipedia URL is one of potential values returned by entity linking of entity recognition. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-get-started-azure)
+> Language Name, ISO 6391 Code, and Score are three values returned by the Language service of natural language processing (NLP) in Azure. Bounding box coordinates are returned by the Azure AI Vision services in Azure. Wikipedia URL is one of the potential values returned by entity linking of entity recognition. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-get-started-azure)
 </details>
 
 ---
@@ -414,7 +414,7 @@ Q: Which three capabilities are examples of image generation features for a gene
 - **Creating variations of an image**
 - **Editing an image**
 - **New image creation**
-> Image generation models can take a prompt, a base image, or both, and create something new. These generative AI models can create both realistic and artistic images, change the layout or style of an image, and create variations of a provided image. [Source](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation)
+> Image generation models can take a prompt, a base image, or both and create something new. These generative AI models can create both realistic and artistic images, change the layout or style of an image, and create variations of a provided image. [Source](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation)
 </details>
 
 ---
@@ -424,7 +424,7 @@ Which capability is NOT supported by the DALL-E model?
 <details><summary>Show the answer</summary><p>
 
 - **Image description**
-> Image description is not a capability included in the DALL-E model, therefore, it is not a use case that can be implemented by using DALL-E, while the other three capabilities are offered by DALL-E in Azure OpenAI. [Source](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation)
+> Image description is not a capability included in the DALL-E model. Therefore, it is not a use case that can be implemented by using DALL-E, while the other three capabilities are offered by DALL-E in Azure OpenAI. [Source](https://learn.microsoft.com/training/modules/explore-azure-openai/7-understand-openai-image-generation)
 </details>
 
 ---
@@ -446,3 +446,280 @@ Q: Select the answer that correctly completes the sentence.
 </details>
 
 ---
+Q: Which type of artificial intelligence (AI) workload provides the ability to classify individual pixels in an image depending on the object that they represent?
+<details><summary>Show the answer</summary><p>
+
+- **Semantic segmentation**
+> Semantic segmentation provides the ability to classify individual pixels in an image depending on the object that they represent. The other answer choices also process images, but their outcomes are different. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/4-understand-computer-vision)
+</details>
+
+---
+Q: Which artificial intelligence (AI) workload scenario is an example of natural language processing (NLP)?
+<details><summary>Show the answer</summary><p>
+
+- **Extracting key phrases from a business insights report**
+> Extracting key phrases from text to identify the main terms is an NLP workload. Predicting whether customers are likely to buy a product based on previous purchases requires the development of a machine learning model. Monitoring for sudden increases in quantity of failed sign-in attempts is a different workload. Identifying objects in landscape images is a computer vision workload. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/)
+</details>
+
+---
+Q: Which two artificial intelligence (AI) workload scenarios are examples of natural language processing (NLP)? Each correct answer presents a complete solution.
+<details><summary>Show the answer</summary><p>
+
+- **Performing sentiment analysis on social media data**
+- **Translating text between different languages from product reviews**
+> Translating text between different languages from product reviews is an NLP workload that uses the Azure AI Translator service and is part of Azure AI Services. It can provide text translation of supported languages in real time. Performing sentiment analysis on social media data is an NLP that uses the sentiment analysis feature of the Azure AI Service for Language. It can provide sentiment labels, such as negative, neutral, and positive for text-based sentences and documents. [Source](https://learn.microsoft.com/training/paths/explore-natural-language-processing/)
+</details>
+
+---
+Q: You are exploring solutions to improve the document search and indexing service for employees.
+
+You need an artificial intelligence (AI) search solution that will include searching text in various types of documents, such as images.
+
+Which type of AI workload is this?
+<details><summary>Show the answer</summary><p>
+
+- **Data mining**
+> Data mining workloads primarily focus on the searching and indexing of data. The computer vision can be used to extract information from images, but it is not a search and indexing solution. Conversational AI is part of natural language processing (NLP) and facilitates the creation of chatbots. Semantic segmentation provides the ability to classify individual pixels in an image depending on the object that they represent. [Source](https://learn.microsoft.com/training/paths/explore-fundamentals-of-knowledge-mining/)
+</details>
+
+---
+Q: Which principle of responsible artificial intelligence (AI) defines the framework of governance and organization principles that meet ethical and legal standards of AI solutions?
+<details><summary>Show the answer</summary><p>
+
+- **Accountability**
+> Accountability defines the framework of governance and organizational principles, which are meant to ensure that AI solutions meet ethical and legal standards that are clearly defined. The other answer choices do not define the framework of governance and organization principles, but provide guidance regarding the ethical and legal aspects of the corresponding standards. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/8-understand-responsible-ai)
+</details>
+
+---
+Q: Which principle of responsible artificial intelligence (AI) plays the primary role when implementing an AI solution that meet qualifications for business loan approvals?
+<details><summary>Show the answer</summary><p>
+
+- **Fairness**
+> Fairness is meant to ensure that AI models do not unintentionally incorporate a bias based on criteria such as gender or ethnicity. Transparency does not apply in this case since banks commonly use their proprietary models when processing loan approvals. Inclusiveness is also out of scope since not everyone is qualified for a loan. Safety is not a primary consideration since there is no direct threat to human life or health in this case. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/8-understand-responsible-ai)
+</details>
+
+---
+Q: You need to identify numerical values that represent the probability of humans developing diabetes based on age and body fat percentage.
+
+Which type of machine learning model should you use?
+<details><summary>Show the answer</summary><p>
+
+- **Logistic regression**
+> Multiple linear regression models a relationship between two or more features and a single label. Linear regression uses a single feature. Logistic regression is a type of classification model, which returns either a Boolean value or a categorical decision. Hierarchical clustering groups data points that have similar characteristics. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/understand-classification-machine-learning/2-what-is-classification) 
+</details>
+
+---
+Q: A retailer wants to group together online shoppers that have similar attributes to enable its marketing team to create targeted marketing campaigns for new product launches.
+
+Which type of machine learning is this?
+<details><summary>Show the answer</summary><p>
+
+- **Clustering**
+> Clustering is a machine learning type that analyzes unlabeled data to find similarities present in the data. It then groups (clusters) similar data together. In this example, the company can group online customers based on attributes that include demographic data and shopping behaviors. The company can then recommend new products to those groups of customers who are most likely to be interested in them. Classification and multiclass classification are used to predict categories of data. Regression is a machine learning scenario that is used to predict numeric values. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/4-regression)
+</details>
+
+---
+Q: Which assumption of the multiple linear regression model should be satisfied to avoid misleading predictions?
+<details><summary>Show the answer</summary><p>
+
+- **Features are independent of each other**
+> Multiple linear regression models the relationship between several features and a single label. The features must be independent of each other, otherwise, the model's predictions will be misleading. [Source](https://learn.microsoft.com/training/modules/understand-regression-machine-learning/4-multiple-linear-regression)
+</details>
+
+---
+Q: Which feature makes regression an example of supervised machine learning?
+<details><summary>Show the answer</summary><p>
+
+- **Use of historical data with known label values to train a model**
+> Regression is an example of supervised machine learning due to the use of historical data with known label values to train a model. Regression does not rely on randomly generated data for training. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/train-evaluate-regression-models/2-what-is-regression) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/train-evaluate-cluster-models/2-what-is-clustering)
+</details>
+
+---
+Q: In a regression machine learning algorithm, what are the characteristics of features and labels in a validation dataset?
+<details><summary>Show the answer</summary><p>
+
+- **Known feature and label values**
+> In a regression machine learning algorithm, a validation set contains known feature and label values. [Source](https://learn.microsoft.com/training/modules/train-evaluate-regression-models/2-what-is-regression)
+</details>
+
+---
+Q: A company is using machine learning to predict house prices based on appropriate house attributes.
+
+For the machine learning model, which attribute is the label?
+<details><summary>Show the answer</summary><p>
+
+- **Price of the house**
+> The price of the house is the label you are attempting to predict through the machine learning model. This is typically done by using a regression model. Floor space size, number of bedrooms, and age of the house are all input variables for the model to help predict the house price label. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
+</details>
+
+---
+Q: A company wants to predict household water use based on the number of people in a house, the weather temperature, and the time of year.
+
+In terms of data labels and features, what is the label in this use case?
+<details><summary>Show the answer</summary><p>
+
+- **Water use**
+> Water use is the label value that you want to predict, also known as the independent variable. Number of people in the house, weather temperature, and time of year are features, and are values that are dependent on the label. Number of people in the house, weather temperature, and time of year can influence the water consumed in a household. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
+</details>
+
+---
+Q: What is the purpose of a validation dataset used for as part of the development of a machine learning model?
+<details><summary>Show the answer</summary><p>
+
+- **Evaluating the trained model**
+> The validation dataset is a sample of data held back from a training dataset. It is then used to evaluate the performance of the trained model. Cleaning missing data is used to detect missing values and perform operations to fix the data or create new values. Feature engineering is part of preparing the dataset and related data transformation processes. Summarizing the data is used to provide summary statistics, such as the mean or count of distinct values in a column. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/4-regression)
+</details>
+
+---
+Q: What should you do after preparing a dataset and before training the machine learning model?
+<details><summary>Show the answer</summary><p>
+
+- **Split data into training and validation datasets**
+> Splitting data into training and validation datasets leaves you with two datasets, the first and largest of which is the training dataset you use to train the model. The second, smaller dataset is the held back data and is called the validation dataset, as it is used to evaluate the trained model. If normalizing or summarizing the data is required, it will be carried out as part of data transformation. Cleaning missing data is part of preparing the data and the data transformation processes. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/4-regression)
+</details>
+
+---
+Q: Which three supervised machine learning models can you train by using automated machine learning (automated ML) in the Azure Machine Learning studio? Each correct answer presents a complete solution.
+<details><summary>Show the answer</summary><p>
+
+- **Classification**
+- **regression**
+- **Time-series forecasting**
+> Time-series forecasting, regression, and classification are supervised machine learning models. Automated ML learning can predict categories or classes by using a classification algorithm, as well as numeric values as part of the regression algorithm, and at a future point in time by using time-series data. Inference pipeline is not a machine learning model. Clustering is unsupervised machine learning and automated ML only works with supervised learning algorithms. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
+</details>
+
+---
+Q: Which machine learning algorithm module in the Azure Machine Learning designer is used to train a model?
+<details><summary>Show the answer</summary><p>
+
+- **Linear Regression**
+> Linear regression is a machine learning algorithm module used for training regression models. The Clean Missing Data module is part of preparing the data and data transformation process. Select Columns in Dataset is a data transformation component that is used to choose a subset of columns of interest from a dataset. Evaluate model is a component used to measure the accuracy of trained models. [Source](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/4-regression)
+</details>
+
+---
+Q: Which artificial intelligence (AI) technique serves as the foundation for modern image classification solutions?
+<details><summary>Show the answer</summary><p>
+
+- **Deep learning**
+> Modern image classification solutions are based on deep learning techniques. Semantic segmentation provides the ability to classify individual pixels in an image depending on the object that they represent. Both linear regression and multiple linear regression use training and validating predictions to predict numeric values, so they are not part of image classification solutions. [Source<sup>1</sup>](https://learn.microsoft.com/training/modules/analyze-images-computer-vision/2b-computer-vision-models) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/fundamentals-machine-learning/)
+</details>
+
+---
+Q: Which artificial intelligence (AI) technique should be used to extract the name of a store from a photograph displaying the store front?
+<details><summary>Show the answer</summary><p>
+
+- **Optical character recognition (OCR)**
+> OCR provides the ability to detect and read text in images. NLP is an area of AI that deals with identifying the meaning of a written or spoken language, but not detecting or reading text in images. Image classification classifies images based on their contents. Semantic segmentation provides the ability to classify individual pixels in an image. [Source](https://learn.microsoft.com/training/modules/get-started-ai-fundamentals/4-understand-computer-vision)
+</details>
+
+---
+Q: Which two specialized domain models are supported by Azure AI Vision when categorizing an image? Each correct answer presents a complete solution.
+<details><summary>Show the answer</summary><p>
+
+- **Celebrities**
+- **Landmarks**
+> When categorizing an image, the Azure AI Vision service supports two specialized domain models: celebrities and landmarks. Image types is an additional capability of the computer vision service, allowing it to detect the type of image, such as a clip art image or a line drawing. Both people_ and people_group are supported categories when performing image classification. [Source](https://learn.microsoft.com/training/modules/analyze-images-computer-vision/2-image-analysis-azure)
+</details>
+
+---
+Q: You have a set of images. Each image shows one type of bone fracture. What allows you to identify bone fractures in different X-ray images?
+<details><summary>Show the answer</summary><p>
+
+- **Image classification**
+> Image classification is part of computer vision and can be used to evaluate images from an X-ray machine to quickly classify specific bone fracture types. This helps improve diagnosis and treatment plans. An image classification model is trained to facilitate the categorizing of the bone fractures. Object detection is used to return identified objects in an image, such as a cat, person, or chair. Conversational AI is used to create intelligent bots that can interact with people by using natural language. Facial detection is used to detect the location of human faces in an image. [Source](https://learn.microsoft.com/training/modules/analyze-images-computer-vision/2b-computer-vision-models)
+</details>
+
+---
+Q: You have a set of images. Each image shows multiple vehicles. What allows you to identity different vehicle types in the same traffic monitoring image?
+<details><summary>Show the answer</summary><p>
+
+- **Object detection**
+> Object detection can be used to evaluate traffic monitoring images to quickly classify specific vehicle types, such as car, bus, or cyclist. Linear regression is a machine learning training algorithm for training regression models. Image classification is part of computer vision that is concerned with the primary contents of an image. OCR is used to extract text and handwriting from images. [Source](https://learn.microsoft.com/training/modules/analyze-images-computer-vision/2b-computer-vision-models)
+</details>
+
+---
+Q: Which additional piece of information is included with each phrase returned by an image description task of the Azure AI Vision?
+<details><summary>Show the answer</summary><p>
+
+- **Confidence score**
+> Each phrase returned by an image description task of the Azure AI Vision includes the confidence score. An endpoint and a key must be provided to access the Azure AI Vision service. Bounding box coordinates are returned by services such as object detection, but not image description. [Source](https://learn.microsoft.com/training/modules/analyze-images-computer-vision/2-image-analysis-azure)
+</details>
+
+---
+Q: Which natural language processing (NLP) technique normalizes words before counting them?
+<details><summary>Show the answer</summary><p>
+
+- **Stemming**
+> Stemming normalizes words before counting them. Frequency analysis counts how often a word appears in a text. N-grams extend frequency analysis to include multi-term phrases. Vectorization captures semantic relationships between words by assigning them to locations in n-dimensional space.[Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-understand-text-analytics)
+</details>
+
+---
+Q: Which natural language processing (NLP) technique assigns values to words such as plant and flower, so that they are considered closer to each other than a word such as airplane?
+<details><summary>Show the answer</summary><p>
+
+- **Vectorization**
+> Vectorization captures semantic relationships between words by assigning them to locations in n-dimensional space. Lemmatization, also known as stemming, normalizes words before counting them. Frequency analysis counts how often a word appears in a text. N-grams extend frequency analysis to include multi-term phrases. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-understand-text-analytics)
+</details>
+
+---
+Q: What is the confidence score returned by the Azure AI Language detection service of natural language processing (NLP) for an unknown language name?
+<details><summary>Show the answer</summary><p>
+
+- **NaN**
+> NaN, or not a number, designates an unknown confidence score. Unknown is a value with which the NaN confidence score is associated. The score values range between 0 and 1, with 0 designating the lowest confidence score and 1 designating the highest confidence score. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-get-started-azure)
+</details>
+
+---
+Q: Which feature of the Azure AI Language service includes functionality that returns links to external websites to disambiguate terms identified in a text?
+<details><summary>Show the answer</summary><p>
+
+- **Entity recognition**
+> Entity recognition includes the entity linking functionality that returns links to external websites to disambiguate terms (entities) identified in a text. Key phrase extraction evaluates the text of a document and identifies its main talking points. Azure AI Language detection identifies the language in which text is written. Sentiment analysis evaluates text and returns sentiment scores and labels for each sentence. [Source](https://learn.microsoft.com/training/modules/analyze-text-with-text-analytics-service/2-get-started-azure)
+</details>
+
+---
+Q: For which two scenarios is the Universal Language Model used by the speech-to-text API optimized? Each correct answer presents a complete solution.
+<details><summary>Show the answer</summary><p>
+
+- **Conversational**
+- **Dictation**
+> The Universal Language Model used by the speech-to-text API is optimized for conversational and dictation scenarios. The acoustic, language, and pronunciation scenarios require developing your own model. [Source](https://learn.microsoft.com/training/modules/recognize-synthesize-speech/2-get-started-azure)
+</details>
+
+---
+Q: Which Azure resource provides direct access to both Azure AI Translator and Azure AI Speech services through a single endpoint and authentication key?
+<details><summary>Show the answer</summary><p>
+
+- **Azure AI Services**
+> Azure AI Services provides direct access to both Azure AI Translator and Azure AI Speech services through a single endpoint and authentication key. Azure AI Language service can be used to access the Azure AI Language service, but not the Azure AI Translator and Azure AI Speech services. The Machine Learning service is used to design, implement, and deploy Machine Learning models. Azure AI Bot Service provides a framework for developing, publishing, and managing bots in Azure. [Source](https://learn.microsoft.com/training/modules/translate-text-with-translation-service/2-get-started-azure)
+</details>
+
+---
+Q: Which three features are elements of the Azure AI Speech service? Each correct answer presents a complete solution.
+<details><summary>Show the answer</summary><p>
+
+- **Language identification**
+- **Speaker recognition**
+- **Voice assistants**
+> Language identification, speaker recognition, and voice assistants are all elements of the Azure AI Speech service. Text translation and document translation are part of the Translator service. [Source<sup>1</sup>](https://learn.microsoft.com/azure/cognitive-services/speech-service/overview) [Source<sup>2</sup>](https://learn.microsoft.com/training/modules/recognize-synthesize-speech/)
+</details>
+
+---
+Q: Select the answer that correctly completes the sentence.
+
+[Answer choice] can return responses, such as natural language, images, or code, based on natural language input.
+<details><summary>Show the answer</summary><p>
+
+- **Generative AI**
+> Generative AI models offer the capability of generating images based on a prompt by using DALL-E models, such as generating images from natural language. The other AI capabilities are used in different contexts to achieve other goals. [Source](https://learn.microsoft.com/training/modules/fundamentals-generative-ai/2-what-is-generative-ai)
+</details>
+
+---
+Q: As per the NIST AI Risk Management Framework, what is the first stage to consider when developing a responsible generative AI solution?
+<details><summary>Show the answer</summary><p>
+
+- **Identify potential harms**
+> Identifying potential harms is the first stage when planning a responsible generative AI solution. [Source](https://learn.microsoft.com/training/modules/responsible-generative-ai/2-plan-responsible-ai)
+</details>
+
+----
