updated ai 900 fundamentals

--- a/AI-900.md
+++ b/AI-900.md
@@ -1,3 +1,20 @@
+# Azure AI Fundamentals
+
+**This certification validates your expertise with Azure AI Fundamentals.**
+<p>
+Candidates for this exam should be entry-level developers or non-technical support, project managers, or program managers looking to validate basic fundamentals of GitHub. This exam measures entry level skills with GitHub basics like repositories, commits, branching, markdowns, and project management
+</p>
+
+> [!IMPORTANT]
+> **These are NOT real questions from the exam, but quite close enough to what you can get. The goal is to help you prepare and obtain the certification.**
+
+## Skills measured
+
+- Describe Artificial Intelligence workloads and considerations (15–20% of the exam)
+- Describe fundamental principles of machine learning on Azure (20–25% of the exam)
+- Describe features of computer vision workloads on Azure (15–20% of the exam)
+- Describe features of Natural Language Processing (NLP) workloads on Azure (15–20% of the exam)
+- Describe features of generative AI workloads on Azure (15–20% of the exam)
 
 ## Questions
 
