updated ai 900 fundamentals

--- a/AI-900.md
+++ b/AI-900.md
@@ -2,7 +2,7 @@
 
 **This certification validates your expertise with Azure AI Fundamentals.**
 <p>
-Candidates for this exam should be entry-level developers or non-technical support, project managers, or program managers looking to validate basic fundamentals of GitHub. This exam measures entry level skills with GitHub basics like repositories, commits, branching, markdowns, and project management
+Candidates for this exam should be entry-level techicians or non-technicians looking to validate basic fundamentals of Azure AI. This exam is an opportunity to demonstrate knowledge of common ML and AI workloads and how to implement them on Azure.
 </p>
 
 > [!IMPORTANT]
